--- a/.github/workflows/main_onlinemarket.yml
+++ b/.github/workflows/main_onlinemarket.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - onlinemarket
 
 on:
@@ -16,36 +13,41 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java version
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'microsoft'
+          java-version: "17"
+          distribution: "adoptopenjdk" # veya openjdk tercih edebilirsiniz
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Set up Gradle
+        uses: gradle/wrapper-validation-action@v2
+        with:
+          gradle-version: "7.6" # Gradle'ın sürümünü buraya ekleyebilirsiniz
+
+      - name: Build with Gradle
+        run: gradle build # Gradle build komutunu çalıştırarak derleme yapın
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: "${{ github.workspace }}/build/libs/*.jar" # Gradle çıkışı genellikle burada olur
 
   deploy:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # Bu, JWT istekleri için gereklidir
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -57,7 +59,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'onlinemarket'
-          slot-name: 'Production'
-          package: '*.jar'
-          
+          app-name: "onlinemarket"
+          slot-name: "Production"
+          package: "*.jar"
